- Showing the glyph id for characters in the status bar - Enumerating the CMAP from the true type font to accurately determining existing unicode characters
git-svn-id: https://svn.code.sf.net/p/bmfont/code/trunk@13 6c2ace76-cde4-427a-921d-c9339ba72be2

--- a/source/bmfont.vcxproj
+++ b/source/bmfont.vcxproj
@@ -110,7 +110,7 @@
       <AdditionalDependencies>Usp10.lib;comctl32.lib;libpng16.lib;zlibstat.lib;jpeg.lib;libsquish.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>.\Debug/bmfont.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>libs\libpng;libs\zlib;libs\libjpeg;libs\squish;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>libs\libpng;libs\zlib\debug;libs\libjpeg;libs\squish\debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\Debug/bmfont.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
