- Fixed corrupt glyphs when rendering large fonts from outline - Started work on an option to inspect the actual TrueType fonts to better understand the structure
git-svn-id: https://svn.code.sf.net/p/bmfont/code/trunk@15 6c2ace76-cde4-427a-921d-c9339ba72be2

--- a/source/bmfont.vcxproj
+++ b/source/bmfont.vcxproj
@@ -343,6 +343,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="inspectfont.cpp" />
     <ClCompile Include="main.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Disabled</Optimization>
@@ -382,6 +383,7 @@
     <ClInclude Include="fontpage.h" />
     <ClInclude Include="iconimagedlg.h" />
     <ClInclude Include="imagewnd.h" />
+    <ClInclude Include="inspectfont.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="unicode.h" />
   </ItemGroup>
