--- a/source/resource.rc
+++ b/source/resource.rc
@@ -1,6 +1,6 @@
 /*
    AngelCode Bitmap Font Generator
-   Copyright (c) 2004-2016 Andreas Jonsson
+   Copyright (c) 2004-2017 Andreas Jonsson
   
    This software is provided 'as-is', without any express or implied 
    warranty. In no event will the authors be held liable for any 
@@ -84,6 +84,20 @@ IDR_IMG_MGR_MENU MENU
 
 
 LANGUAGE LANG_PORTUGUESE, SUBLANG_PORTUGUESE_BRAZILIAN
+IDR_INSPECT_FONT_MENU MENU
+{
+    POPUP "&View"
+    {
+        MENUITEM "&Basic info", ID_VIEW_BASIC
+        MENUITEM "&KERN table", ID_VIEW_KERN
+        MENUITEM "&GPOS table", ID_VIEW_GPOS
+        MENUITEM "&GSUB table", ID_VIEW_GSUB
+    }
+}
+
+
+
+LANGUAGE LANG_PORTUGUESE, SUBLANG_PORTUGUESE_BRAZILIAN
 IDR_MENU MENU
 {
     POPUP "&Options"
@@ -98,6 +112,7 @@ IDR_MENU MENU
         MENUITEM "&Load configuration", ID_OPTIONS_LOADCONFIGURATION
         MENUITEM "Save &configuration as...", ID_OPTIONS_SAVECONFIGURATIONAS
         MENUITEM SEPARATOR
+        MENUITEM "&Inspect font", ID_OPTIONS_INSPECTFONT
         MENUITEM "&About...", ID_OPTIONS_ABOUT
         MENUITEM "E&xit\t[ALT]+[F4]", ID_APP_EXIT
     }
@@ -143,7 +158,7 @@ FONT 8, "MS Sans Serif", 0, 0, 0
     DEFPUSHBUTTON   "OK", IDOK, 68, 137, 50, 14
     LTEXT           "Bitmap Font Generator", IDC_STATIC, 57, 7, 72, 8, SS_LEFT
     CTEXT           "v1.14 beta", IDC_STATIC, 73, 16, 39, 8, NOT WS_GROUP | SS_CENTER
-    LTEXT           "Copyright 2004-2016 Andreas Jönsson", IDC_STATIC, 32, 53, 122, 8, SS_LEFT
+    LTEXT           "Copyright 2004-2017 Andreas Jönsson", IDC_STATIC, 32, 53, 122, 8, SS_LEFT
     LTEXT           "www.AngelCode.com", IDC_URL1, 58, 77, 69, 8, SS_LEFT | SS_NOTIFY
     LTEXT           "All rights reserved", IDC_STATIC, 65, 63, 56, 8, SS_LEFT
     LTEXT           "This software is freeware", IDC_STATIC, 53, 30, 79, 8, SS_LEFT
