right click character pop menu to quick import image. fix image load error tip. add .gitingore; add svn-fetch.txt

--- a/source/resource.rc
+++ b/source/resource.rc
@@ -144,6 +144,14 @@ IDR_POPUP MENU
     }
 }
 
+LANGUAGE LANG_PORTUGUESE, SUBLANG_PORTUGUESE_BRAZILIAN
+IDR_CHAR_EDIT MENU
+{
+	POPUP "CharEdit"
+	{
+		MENUITEM "&Import Image", ID_POPUP_EDIT_IMAGE
+	}
+}
 
 
 //
