Code changes contributed by Sucker Punch Productions: - autofit algorithm to determine suitable font size for texture size - adaptive padding based on factor multiplied by average character width - improved reallocation of default C i/o FILE handles to C++ i/o streams - command line tool now returns non-zero value upon error in config file
git-svn-id: https://svn.code.sf.net/p/bmfont/code/trunk@19 6c2ace76-cde4-427a-921d-c9339ba72be2

--- a/bmfont_com/bmfont_com.vcxproj
+++ b/bmfont_com/bmfont_com.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{B0B89315-1F66-43FB-8A0B-07B976A72B51}</ProjectGuid>
     <RootNamespace>bmfont_com</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
